SAPHY-138: Swagger 설정 yml 추가